<resources>
    <string name="app_name">MatsedillVikunnar</string>
    <string name="title_one">Matseðill</string>
    <string name="title_two">Vikunnar</string>
    <string name="email">Netfang</string>
    <string name="password">Lykilorð</string>
    <string name="login">Innskrá</string>
    <string name="login_page">Innskráning</string>
    <string name="signup_link">Nýskrá</string>
    <string name="managed_to_login_toast">Tókst að innskrá</string>
    <string name="failed_to_login_toast">Netfang eða lykilorð vitlaust</string>


    <string name="signup">Stofna nýjan aðgang</string>
    <string name="signup_page">Nýskráning</string>
    <string name="username">Notendanafn</string>
    <string name="you_have_account">Áttu nú þegar aðgang ?</string>
    <string name="sign_in">Skrá inn</string>
    <string name="sign_out">Skrá út</string>



    <string name="choose_category">Veldu þinn flokk</string>
    <string name="omnivore">Alæta</string>
    <string name="pescatarian">Fiskmetisæta</string>
    <string name="vegetarian">Grænmetisæta</string>
    <string name="vegan">Grænkeri</string>
    <string name="monday">Mánudagur</string>
    <string name="tuesday">Þriðjudagur</string>
    <string name="wednesday">Miðvikudagur</string>
    <string name="thursday">Fimmtudagur</string>
    <string name="friday">Föstudagur</string>
    <string name="saturday">Laugardagur</string>
    <string name="sunday">Sunnudagur</string>
    <string name="confirm_mealplan">Samþykkja</string>
    <string name="new_random_mealplan">Velja aftur</string>
    <string name="shopping_list">Innkaupalisti</string>
    <string name="quantity">Magn</string>
    <string name="ingredients">Hráefni</string>
    <string name="recipe_name">Nafn á uppskrift</string>
    <string name="monday_recipe">mánudags uppskrift</string>
    <string name="tuesday_recipe">þriðjudags uppskrift</string>
    <string name="wednesday_recipe">miðvikudags uppskrift</string>
    <string name="thursday_recipe">fimmtudags uppskrift</string>
    <string name="friday_recipe">föstudags uppskrift</string>
    <string name="saturday_recipe">laugardags uppskrift</string>
    <string name="sunday_recipe">sunnudags uppskrift</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>